<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Ryan Aquilina on 11/2/17 10:54 AM
  ~ Contact details in https://www.upwork.com/freelancers/~01ed20295946e923f0
  ~ Copyright (c) 2017.  All rights reserved
  ~
  ~ Last modified 11/2/17 10:54 AM
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="aquilina.ryan.homelightingapp.ui.main_activity.MainActivity"
             android:background="@color/colorSecondaryDark">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
                android:id="@+id/groups_recycler_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="72dp"
                android:clipToPadding="false"/>

        <Button
                android:id="@+id/save_macro_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_save_macro"
                android:textColor="@color/colorPrimaryText"
                android:backgroundTint="@color/colorAccent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:visibility="gone"/>
    </RelativeLayout>

    <LinearLayout
            android:id="@+id/linear_layout_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_info_outline_white_48dp"
                android:contentDescription="@string/text_view_create_presets"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_view_create_presets"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryText"
                android:fontFamily="@font/raleway_bold"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textAlignment="center"/>
    </LinearLayout>
</FrameLayout>