...
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

        <EditText
                android:id="@+id/dialog_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone|flagNoExtractUi"
                android:inputType="textCapSentences"
                android:textSize="16sp"
                android:layout_marginStart="16dip"
...
                    android:layout_width="0dip"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:layout_height="wrap_content" />
            <Button android:id="@+id/button2"
                    android:layout_width="0dip"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:maxLines="2"
                    android:layout_height="wrap_content" />
...
