<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="aquilina.ryan.homelightingapp.ui.main_activity.MainActivity"
        android:background="@color/colorSecondaryDark">

    <android.support.v7.widget.RecyclerView
            android:id="@+id/devices_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:paddingBottom="4dp"/>

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateOnly="false"
            android:layout_marginTop="-8dp"
            android:indeterminateTint="@color/colorAccent"
            android:indeterminateTintMode="src_in"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            android:visibility="invisible"/>

    <TextView
            android:id="@+id/no_devices_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/text_view_no_devices_found"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryText"
            android:fontFamily="@font/raleway_bold"
            android:layout_marginBottom="18dp"/>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_to_group_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add_white_36dp"/>
</android.support.design.widget.CoordinatorLayout>
