<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/refresh"
            android:title="@string/action_refresh"
            android:icon="@drawable/refresh_icon"
            app:showAsAction="ifRoom"/>
</menu>
