<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_scan"
                android:icon="@drawable/scan_icon"
                android:title="@string/nav_scan_mode_name"/>
        <item
                android:id="@+id/nav_design"
                android:icon="@drawable/design_look_icon"
                android:title="@string/nav_design_mode_name"/>
...
                android:title="@string/nav_configuration_name"/>
    </group>

    <group  android:id="@+id/group_managment"
            android:checkableBehavior="single">
        <item
                android:id="@+id/nav_group_node_groups"
                android:icon="@drawable/group_icon"
                android:title="@string/nav_group_management_node_groups" />
        <item
                android:id="@+id/nav_group_presets"
                android:icon="@drawable/preset_icon"
                android:title="@string/nav_group_management_presets" />
...
